--- a/stories/bn/0111_জলহস্তীর-কেন-লোম-নেই_slides.html
+++ b/stories/bn/0111_জলহস্তীর-কেন-লোম-নেই_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>کھلائی پودوں سے بات کرتی ہے - Global African Storybook</title>
+  <title>জলহস্তীর কেন লোম নেই - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="کھلائی-پودوں-سے-بات-کرتی-ہے" class="slide level1">
-<h1>کھلائی پودوں سے بات کرتی ہے</h1>
+<section id="জলহসতর-কন-লম-নই" class="slide level1">
+<h1>জলহস্তীর কেন লোম নেই</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p>یہ کھلائی ہے۔ وہ سات سال کی ہے۔ اس کی زبان لبوکوسو میں اس کے نام کا مطلب ہے، 'بہت اچھا'۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
+<p>একদিন খরগোশ নদীর ধারে হাঁটছিল।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p>کھلائی اٹھتی ہے اور مالٹوں کے درخت سے بات کرتی ہے۔ 'براہ کرم مالٹے کے درخت، بڑے ہو جاؤ اور ہمیں بہت زیادہ مالٹے دو۔'</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
+<p>জলহস্তীও সেখানে ছিল, সে ঘুরে বেড়াচ্ছিল এবং কিছু সুন্দর কচি ঘাস খাচ্ছিল।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p>کھلائی اسکول کی طرف چلتی ہے۔ اور راستے میں وہ گھاس سے بات کرتی ہے۔ 'براہ کرم گھاس سبز ہو جاو، اور سوکھنا مت۔'</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
+<p>জলহস্তী খরগোশকে সেখানে দেখতে পায়নি এবং ভুল করে সে খরগোশের পায়ে পাড়া দিল। খরগোশ জলহস্তীকে চিৎকার করে বলল, &quot;এইযে জলহস্তী! তুমি কি দেখতে পাচ্ছনা যে তুমি আমার পায়ে পাড়া দিয়েছ?&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p>کھلائی جنگلی پھولوں کے پاس سے گزرتی ہے۔ 'براہ کرم پھول ترو تازہ رہو تا کہ میں تمہیں اپنے بالوں میں لگا سکوں۔'</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
+<p>জলহস্তী খরগোশের কাছে ক্ষমা চাইল, &quot;আমি খুবই দুঃখিত। আমি তোমাকে দেখিনি। অনুগ্রহ করে আমাকে ক্ষমা করে দাও!&quot; কিন্তু খরগোশ শুনলনা এবং জলহস্তীকে চিৎকার করে বলল, &quot;তুমি এটি ইচ্ছা করে করেছ! একদিন তুমি দেখবে! তোমাকে এর মাশুল দিতে হবে!&quot;</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p>اسکول میں کھلائی نے صحن کے وسط میں درخت سے بات کی۔ 'درخت برائے مہربانی، بڑی شاخیں نکالو تاکہ ہم آپ کے سایہ کے نیچے پڑھ سکیں۔'</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
+<p>খরগোশ আগুনের খোঁজে গেল এবং বলল, &quot;যাও, জলহস্তীকে জ্বালিয়ে দিবে যখন সে ঘাস খেতে পানি থেকে বেরিয়ে আসবে। সে আমাকে পাড়া দিয়েছে!&quot; আগুন বলল, &quot;কোন সমস্যা নেই, খরগোশ, আমার বন্ধু। তুমি যা বলবে আমি তাই করব।&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p>کھلائی اپنے اسکول کے ارد گرد جنگلے سے بات کرتی ہے۔ 'براہ کرم مضبوط ہو جاؤ اور خراب لوگوں کو آنے سے روک دو۔'</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
+<p>পরে যখন জলহস্তী নদী থেকে দূরে ঘাস খাচ্ছিল, তখন আগুন দাউ দাউ করে জ্বলে উঠল। আগুনের শিখা জলহস্তীর লোম পোড়ান শুরু করল।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p>جب کھلائی اسکول سے گھر واپس آتی ہے، تو وہ مالٹوں کے درخت کے پاس جاتی ہے کھلائی پوچھتی ہے 'کیا تمہارے مالٹے پک گئے ا ہے؟'</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
+<p>জলহস্তী কাঁদতে লাগল এবং পানির জন্য দৌড়ে গেল। তার সমস্ত লোম আগুন দিয়ে পুড়িয়ে ফেলা হয়েছিল। জলহস্তী কাঁদতে কাঁদতে বলল, &quot;আমার লোম আগুনে পুড়ে গেছে! আমার সব লোম শেষ হয়ে গেছে! আমার সুন্দর লোম!&quot;</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p>مالٹے ابھی بھی کچے ہیں کھلائی نے آہ بھری۔ میں تم سے کل ملنے آوں گی مالٹوں کے درخت کھلائی نے کہا۔ شائد تٓب تمہارے پاس میرے لیے ایک رس بھرا مالٹا موجود ہو۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
+<p>খরগোশ খুশি হয়েছিল যে জলহস্তীর লোম পুড়ে গিয়েছে। এবং এখনও পর্যন্ত জলহস্তী আগুনের ভয়ে পানির থেকে দূরে যায় না।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="کھلائی-پودوں-سے-بات-کرتی-ہے-1">کھلائی پودوں سے بات کرتی ہے</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<h2 id="জলহসতর-কন-লম-নই-1">জলহস্তীর কেন লোম নেই</h2>
+<strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> Asma Afreen<br> <strong>Language:</strong> Bengali<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/why-hippos-have-no-hair'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
