--- a/stories/index.html
+++ b/stories/index.html
@@ -403,6 +403,18 @@
       <td><a name="bn0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0052</td>
+      <td><a href="/stories/bn/0052_সেম্বিগোয়রে_slides.html" target="_blank">সেম্বিগোয়রে</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0111</td>
+      <td><a href="/stories/bn/0111_জলহস্তীর-কেন-লোম-নেই_slides.html" target="_blank">জলহস্তীর কেন লোম নেই</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0158</td>
       <td><a href="/stories/bn/0158_মুরগী-এবং-ঈগল_slides.html" target="_blank">মুরগী এবং ঈগল</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -6077,7 +6089,7 @@
       <td>0052</td>
       <td><a href="http://africanstorybook.org/stories/simbegwire">Simbegwire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0052">ar</a>, <a href="#de0052">de</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#it0052">it</a>, <a href="#ko0052">ko</a>, <a href="#nn0052">nn</a>, <a href="#no0052">no</a>, <a href="#pa0052">pa</a>, <a href="#pl0052">pl</a>, <a href="#ru0052">ru</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#ur0052">ur</a>, <a href="#vi0052">vi</a>, <a href="#yue0052">yue</a>, <a href="#zh0052">zh</a></td>
+      <td><a href="#ar0052">ar</a>, <a href="#bn0052">bn</a>, <a href="#de0052">de</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#it0052">it</a>, <a href="#ko0052">ko</a>, <a href="#nn0052">nn</a>, <a href="#no0052">no</a>, <a href="#pa0052">pa</a>, <a href="#pl0052">pl</a>, <a href="#ru0052">ru</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#ur0052">ur</a>, <a href="#vi0052">vi</a>, <a href="#yue0052">yue</a>, <a href="#zh0052">zh</a></td>
     </tr>
     <tr>
       <td>0053</td>
@@ -6197,7 +6209,7 @@
       <td>0111</td>
       <td><a href="http://africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0111">ar</a>, <a href="#de0111">de</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#it0111">it</a>, <a href="#ko0111">ko</a>, <a href="#nn0111">nn</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#pl0111">pl</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#ur0111">ur</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
+      <td><a href="#ar0111">ar</a>, <a href="#bn0111">bn</a>, <a href="#de0111">de</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#it0111">it</a>, <a href="#ko0111">ko</a>, <a href="#nn0111">nn</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#pl0111">pl</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#ur0111">ur</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
