--- a/stories/no/0327_å-telle-dyr.html
+++ b/stories/no/0327_å-telle-dyr.html
@@ -70,7 +70,7 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>norsk</div><div class="pageb
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
 
-<p>Fem impalaer og seks villsvin går mot vannet.</p>
+<p>Fem impalaer og seks vortesvin går mot vannet.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
