--- a/stories/pl/0141_kurczak-i-stonoga.html
+++ b/stories/pl/0141_kurczak-i-stonoga.html
@@ -49,7 +49,7 @@ Winny Asara<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
 
-<p>Kurczak i Stonoga to dobrzy przyjaciele. Ale mimo to, zawsze ze sobą rywalizują. Pewnego dnia postanowili zagrać w piłkę nożną, aby sprawdzić kto jest lepszym graczem.</p>
+<p>Kurczak i Stonoga to dobrzy przyjaciele. Pomimo tego, zawsze ze sobą rywalizują. Pewnego dnia postanowili zagrać w piłkę nożną, aby sprawdzić kto jest lepszym graczem.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Winny Asara<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
 
-<p>Nagle mama stonogi usłyszała głos swojego dziecka: „Mamo! Pomóż!” Mama stonogi rozejrzała się dookoła i nasłuchiwała. Ale głos dobiegał ze środka kurczaka.</p>
+<p>Nagle mama stonogi usłyszała głos swojego dziecka: „Mamo! Pomóż!” Mama stonogi rozejrzała się dookoła i nasłuchiwała. Głos dobiegał ze środka kurczaka.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
