--- a/stories/pl/0141_kurczak-i-stonoga_slides.html
+++ b/stories/pl/0141_kurczak-i-stonoga_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
-<p>Kurczak i Stonoga to dobrzy przyjaciele. Ale mimo to, zawsze ze sobą rywalizują. Pewnego dnia postanowili zagrać w piłkę nożną, aby sprawdzić kto jest lepszym graczem.</p>
+<p>Kurczak i Stonoga to dobrzy przyjaciele. Pomimo tego, zawsze ze sobą rywalizują. Pewnego dnia postanowili zagrać w piłkę nożną, aby sprawdzić kto jest lepszym graczem.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
-<p>Nagle mama stonogi usłyszała głos swojego dziecka: „Mamo! Pomóż!” Mama stonogi rozejrzała się dookoła i nasłuchiwała. Ale głos dobiegał ze środka kurczaka.</p>
+<p>Nagle mama stonogi usłyszała głos swojego dziecka: „Mamo! Pomóż!” Mama stonogi rozejrzała się dookoła i nasłuchiwała. Głos dobiegał ze środka kurczaka.</p>
 <center>
 <strong>8</strong>
 </center>
