--- a/stories/pl/0201_ośle-dziecko_slides.html
+++ b/stories/pl/0201_ośle-dziecko_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
-<p>Ludzie zaczęli się kłócić: „Obiecaliśmy tej kobiecie bezpieczeństwo, jej i jej dziecku” - mówili jedni. „Ale przyniosą nam pecha!” - krzyczeli inni.</p>
+<p>Ludzie zaczęli się kłócić: „Obiecaliśmy tej kobiecie bezpieczeństwo, jej i jej dziecku” - mówili jedni. „Przyniosą nam pecha!” - krzyczeli inni.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
-<p>Wysoko pośród chmur obaj zasnęli. Osiołek śnił o matce, która była ciężko chora i wzywała go. Gdy się zbudził...</p>
+<p>Wysoko pośród chmur obaj zasnęli. Osiołek śnił o matce, która była ciężko chora i wzywała go. Gdy się obudził...</p>
 <center>
 <strong>16</strong>
 </center>
