--- a/stories/pl/0210_tingi-i-krowy.html
+++ b/stories/pl/0210_tingi-i-krowy.html
@@ -105,14 +105,14 @@ Ingrid Schechter<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/10.jpg" /></p>
 
-<p>I gdy jeden z żołnierzy stanął na chłopcu - Tingi nie wydał z siebie żadnego dźwięku.</p>
+<p>Gdy jeden z żołnierzy stanął na chłopcu, Tingi nie wydał z siebie żadnego dźwięku.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/11.jpg" /></p>
 
-<p>Kiedy zrobiło się bezpiecznie - Tingi wraz z babcią opuścili swoją kryjówkę.</p>
+<p>Kiedy zrobiło się bezpiecznie, Tingi wraz z babcią opuścili swoją kryjówkę.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
