--- a/stories/pl/0243_wakacje-u-babci_slides.html
+++ b/stories/pl/0243_wakacje-u-babci_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
-<p>Odongo i Apiyo mieszkali z ojcem w mieście. Nie mogli doczekać się wakacji. I to nie tylko dlatego, że w wakacje szkoła była zamknięta, ale przede wszystkim dlatego, że jechali odwiedzić babcię. Babcia mieszkała w wiosce rybackiej nieopodal jeziora.</p>
+<p>Odongo i Apiyo mieszkali z ojcem w mieście. Nie mogli doczekać się wakacj nie tylko dlatego, że w wakacje szkoła była zamknięta, ale przede wszystkim dlatego, że jechali odwiedzić babcię. Babcia mieszkała w wiosce rybackiej nieopodal jeziora.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
-<p>Nyar-Kanyada powitała ich w swoim domu tańcząc i śpiewając z radości. Jej wnuki były szczęśliwe, gdy wręczały jej podarunki z miasta. „Najpierw otwórz mój prezent!” - krzyknął Odongo. „Nie, najpierw mój!” - przekrzykiwał go Apiyo.</p>
+<p>Nyar-Kanyada powitała ich w swoim domu tańcząc i śpiewając z radości. Jej wnuki były szczęśliwe, gdy wręczały jej podarunki z miasta. „Najpierw otwórz mój prezent!” - krzyknął Odongo. „Nie, najpierw mój!” - przekrzykiwała go Apiyo.</p>
 <center>
 <strong>6</strong>
 </center>
