--- a/stories/pl/0262_magozwe.html
+++ b/stories/pl/0262_magozwe.html
@@ -70,7 +70,7 @@ Lesley Koyi<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
 
-<p>Życie na ulicy było trudne. Większość chłopców borykała się z codziennym problemem - zdobyciem jedzenia. Czasem byli aresztowani, czasem pobici. Kiedy byli chorzy, nie miał im kto pomóc. Grupa chłopców żyła z tego co wyżebrała, ze sprzedaży plastikowych opakowań i innych przetwarzalnych odpadów. Stałe konflikty pomiędzy rywalizującymi grupami chłopców walczącymi o wpływy w danej części miasta nie ułatwiały życia.</p>
+<p>Życie na ulicy było trudne. Większość chłopców borykała się z codziennym problemem - zdobyciem jedzenia. Czasem byli aresztowani, czasem bici. Kiedy byli chorzy, nie miał im kto pomóc. Grupa chłopców żyła z tego co wyżebrała, ze sprzedaży plastikowych opakowań i innych przetwarzalnych odpadów. Stałe konflikty pomiędzy rywalizującymi grupami chłopców walczącymi o wpływy w danej części miasta nie ułatwiały życia.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -91,21 +91,21 @@ Lesley Koyi<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
 
-<p>Pewnego zimnego dnia Magozwe stał przy drodze i żebrał. Podszedł do niego mężczyzna i powiedział: „Witaj, jestem Thomas. Pracuję niedaleko, w miejscu, gdzie mógłbyś coś zjeść”. Wskazał na żółty dom z niebieskim dachem, „Liczę, że wpadniesz tam coś zjeść?”. Magozwe popatrzył na mężczyznę a potem na dom. „Może.” odparł i odszedł.</p>
+<p>Pewnego zimnego dnia Magozwe stał przy drodze i żebrał. Podszedł do niego mężczyzna i powiedział: „Witaj, jestem Thomas. Pracuję niedaleko, w miejscu, gdzie mógłbyś coś zjeść”. Wskazał na żółty dom z niebieskim dachem, „Liczę, że wpadniesz tam coś zjeść?”. Magozwe popatrzył na mężczyznę a potem na dom. „Może.” - odparł i odszedł.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
 
-<p>W kolejnych miesiącach bezdomni chłopcy przyzwyczaili się do spotkań z Thomasem w okolicy. Lubił on rozmawiać z ludźmi, zwłaszcza z tymi mieszkającymi na ulicy. Thomas słuchał historii ich życia. Był przy tym poważny i cierpliwy, nigdy nieuprzejmy czy bez szacunku. Niektórzy z chłopców zaczęli odwiedzać niebiesko-żółty dom, aby posilić się w środku dnia.</p>
+<p>W kolejnych miesiącach bezdomni chłopcy przyzwyczaili się do spotkań z Thomasem w okolicy. Lubił on rozmawiać z ludźmi, zwłaszcza z tymi mieszkającymi na ulicy. Thomas słuchał historii ich życia. Był przy tym poważny i cierpliwy, nigdy nieuprzejmy czy bez szacunku. Niektórzy z chłopców zaczęli odwiedzać niebiesko-żółty dom, aby coś zjeść w środku dnia.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
 
-<p>Magozwe siedział na krawężniku i oglądał obrazki w swojej książce kiedy Thomas się do niego przysiadł. „O czym jest ta historia?” zapytał. „Jest o chłopcu, który zostaje pilotem”, odpowiedział Magozwe. „Jak ten chłopiec ma na imię?” dopytał Magozwe. „Nie wiem, nie umiem czytać.” cicho rzekł Magozwe.</p>
+<p>Magozwe siedział na krawężniku i oglądał obrazki w swojej książce, kiedy Thomas się do niego przysiadł. „O czym jest ta historia?” - zapytał. „Jest o chłopcu, który zostaje pilotem”, odpowiedział Magozwe. „Jak ten chłopiec ma na imię?” - dopytywał Magozwe. „Nie wiem, nie umiem czytać” - cicho odpowiedział Magozwe.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Lesley Koyi<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
 
-<p>Magozwe rozmyślał o nowym miejscu i o chodzeniu do szkoły. Co jeśli wuj miał rację i Magozwe był za głupi by czegokolwiek się nauczyć? Co jeśli będą go bili w nowym miejscu? Miał wiele obaw. „Może lepiej jeśli zostanę na ulicy.”pomyślał.</p>
+<p>Magozwe rozmyślał o nowym miejscu i o chodzeniu do szkoły. Co jeśli wuj miał rację i Magozwe był za głupi by czegokolwiek się nauczyć? Co jeśli będą go bili w nowym miejscu? Miał wiele obaw. „Może lepiej jeśli zostanę na ulicy” - pomyślał.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -140,7 +140,7 @@ Lesley Koyi<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
 
-<p>I tak Magozwe wprowadził się do pokoju w domu z zielonym dachem. Dzielił pokój z dwoma innymi chłopcami. Łącznie w tym domu było tam dziesięcioro dzieci wraz z ciocią Cissy, jej mężem, trzema psami, kotem i starą kozą.</p>
+<p>I tak Magozwe wprowadził się do pokoju w domu z zielonym dachem. Dzielił pokój z dwoma innymi chłopcami. Łącznie w tym domu mieszkało tam dziesięcioro dzieci wraz z ciocią Cissy, jej mężem, trzema psami, kotem i starą kozą.</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
@@ -154,7 +154,7 @@ Lesley Koyi<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
 
-<p>Magozwe siedział w ogródku domu z zielonym dachem i czytał opowiadanie do szkoły. Thomas podszedł i usiadł koło niego. „O czym jest ta historia?” zapytał. „Jest o chłopcu, który został nauczycielem.” odpowiedział Magozwe. „Jak mu na imię?” zapytał Thomas. „Ma na imię Magozwe” z uśmiechem odparł Magozwe.</p>
+<p>Pewnego dnia Magozwe siedział w ogródku domu z zielonym dachem i czytał opowiadanie do szkoły. Thomas podszedł i usiadł koło niego. „O czym jest ta historia?” - zapytał. „Jest o chłopcu, który został nauczycielem” - odpowiedział Magozwe. „Jak on ma na imię?” - zapytał Thomas. „Ma na imię Magozwe” - z uśmiechem odparł Magozwe.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
