--- a/stories/pl/0327_liczymy-zwierzęta.html
+++ b/stories/pl/0327_liczymy-zwierzęta.html
@@ -70,7 +70,7 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>Polski</div><div class="page
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
 
-<p>Pięć antylop i sześć dzików podchodzą do wodopoju.</p>
+<p>Pięć antylop i sześć dzików podchodzi do wodopoju.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
