--- a/stories/pl/0337_dzieci-z-wosku_slides.html
+++ b/stories/pl/0337_dzieci-z-wosku_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
-<p>Dawno dawno temu, żyła sobie szczęśliwa rodzina.</p>
+<p>Dawno, dawno temu, żyła sobie szczęśliwa rodzina.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
-<p>Ale mimo to, jeden z chłopców był bardzo ciekawy światła dziennego.</p>
+<p>Mimo to, jeden z chłopców był bardzo ciekawy światła dziennego.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
-<p>Niestety było już za późno - stopił się w słońcu.</p>
+<p>Niestety było już za późno i chłopiec stopił się w słońcu.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
-<p>Wymyślili, że ze stopionego wosku ulepią ptaka.</p>
+<p>Postanowili ze stopionego wosku ulepić ptaka.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
-<p>I gdy wzeszło słońce, ptak odleciał ćwierkając w świetle dziennym.</p>
+<p>Gdy wzeszło słońce, ptak odleciał ćwierkając w świetle dziennym.</p>
 <center>
 <strong>11</strong>
 </center>
