--- a/stories/ur/0291_ُوسی-کی-بہن-نے-کیا-کہا؟.html
+++ b/stories/ur/0291_ُوسی-کی-بہن-نے-کیا-کہا؟.html
@@ -70,7 +70,7 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
 
-<p>لڑکے ُوسی کو تنگ کرنے پر شرمندہ تھے۔ ہم کیک کے لیے توتمہاری مدد نہیں کر سکتے، لیکن یہ چلنے کے لیے چھڑی اپنی بہن کے لیے رکھ لو۔ ایک لڑکے نے کہا، ُوسی نے سفر جاری رکھا۔</p>
+<p>لڑکے ُوسی کو تنگ کرنے پر شرمندہ تھے۔ ہم کیک کے لیے تو تمہاری مدد نہیں کر سکتے، لیکن یہ چلنے کے لیے چھڑی اپنی بہن کے لیے رکھ لو۔ ایک لڑکے نے کہا، ُوسی نے سفر جاری رکھا۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
 
-<p>راستے میں، ُوسی ایک کسان اور ایک گائے سے ملا۔ کیا لذیزکھاس ہے؟ کیا مجھے ایک گٹھی مل سکتی ہے؟ گائے نے پوچھا۔ لیکن گھاس اتنا مزیدار تھا کہ گائے سارا کھا گئی۔</p>
+<p>راستے میں، ُوسی ایک کسان اور ایک گائے سے ملا۔ کیا لذیذ گھاس ہے؟ کیا مجھے ایک گٹھی مل سکتی ہے؟ گائے نے پوچھا۔ لیکن گھاس اتنا مزیدار تھا کہ گائے سارا کھا گئی۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
