--- a/stories/ur/0294_دادی-کے-کیلے_slides.html
+++ b/stories/ur/0294_دادی-کے-کیلے_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>اگلے دن جب دادی میری امی سے ملنے آئیں۔ میں بھاگتے ہوئے اُن کے گھر پہنچی تاکہ ایک بار پھر کیلوں کو دیکھ سکوں۔ وہاں پر پکے ہوئے کیلوں کا ایک گھچا مو جو د تھا میں نے اُسے اُٹھایا اور اپنے کپڑوں میں چھپا لیا۔ ٹوکری کو دوبارہ ڈھانپنے کے بعد میں گھر کے پیچھے گئ اور جلدی سے کیلے کھا لیے۔ آج سے پہلے میں نے اتنے لذ یز اور رسیلے کیلے کبھی نہیں کھائے تھے۔</p>
+<p>اگلے دن جب دادی میری امی سے ملنے آئیں۔ میں بھاگتے ہوئے اُن کے گھر پہنچی تاکہ ایک بار پھر کیلوں کو دیکھ سکوں۔ وہاں پر پکے ہوئے کیلوں کا ایک گھچا موجود تھا میں نے اُسے اُٹھایا اور اپنے کپڑوں میں چھپا لیا۔ ٹوکری کو دوبارہ ڈھانپنے کے بعد میں گھر کے پیچھے گئ اور جلدی سے کیلے کھا لیے۔ آج سے پہلے میں نے اتنے لذیذ اور رسیلے کیلے کبھی نہیں کھائے تھے۔</p>
 <center>
 <strong>7</strong>
 </center>
