--- a/stories/ur/0315_سکیما-کا-گانا_slides.html
+++ b/stories/ur/0315_سکیما-کا-گانا_slides.html
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
-<p>سیکما نے اپنا گانا ختم کیا اور واپس جانے کے مڑا۔ لیکن امیر آدمی بھاگتا ہو ا باہر آیا اورکہا مہربانی کر کے دوبارہ گاو۔</p>
+<p>سکیما نے اپنا گانا ختم کیا اور واپس جانے کے مڑا۔ لیکن امیر آدمی بھاگتا ہوا باہر آیا اورکہا مہربانی کر کے دوبارہ گاو۔</p>
 <center>
 <strong>16</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/18.jpg" /></p>
-<p>اُسی لمحے دو آدمی کسی کو سٹریچر پر اُٹھائے لا رہے تھے۔ اُنہیں امیر آٓدمی کا بیٹا زخمی حالت میں سڑک کی بائیں جانب گِرا ہو ا ملا۔</p>
+<p>اُسی لمحے دو آدمی کسی کو سٹریچر پر اُٹھائے لا رہے تھے۔ اُنہیں امیر آٓدمی کا بیٹا زخمی حالت میں سڑک کی بائیں جانب گِرا ہوا ملا۔</p>
 <center>
 <strong>17</strong>
 </center>
