--- a/stories/ur/0342_سزا_slides.html
+++ b/stories/ur/0342_سزا_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>دیکھو رحیم نے کیا کیا؟ میرا چھوٹا بھائی چلایا۔ رحیم بہت شرارتی اور خود غر ض ہے۔ میں نے کہا۔</p>
+<p>دیکھو رحیم نے کیا کیا؟ میرا چھوٹا بھائی چلایا۔ رحیم بہت شرارتی اور خود غرض ہے، میں نے کہا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
-<p>رحیم بیمار محسوس کرنے لگتا ہے</p>
+<p>رحیم بیمار محسوس کرنے لگتا ہے۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
-<p>میرے پیٹ میں درد ہے۔ رحیم چلایا۔</p>
+<p>میرے پیٹ میں درد ہے، رحیم چلایا۔</p>
 <center>
 <strong>10</strong>
 </center>
