--- a/stories/bn/0052_সেম্বিগোয়রে_slides.html
+++ b/stories/bn/0052_সেম্বিগোয়রে_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Magozwe - Global African Storybook</title>
+  <title>সেম্বিগোয়রে - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="magozwe" class="slide level1">
-<h1>Magozwe</h1>
+<section id="সমবগযর" class="slide level1">
+<h1>সেম্বিগোয়রে</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
-<p>W tętniącym życiem mieście - Nairobi, z dala od opiekuńczego domu, żyła grupa bezdomnych chłopców. Witali każdy dzień z pokorą. Pewnego poranka chłopcy zwijali swoje maty po nocy przespanej na zimnym bruku. Aby odpędzić zimno rozpalili ogień podpalając śmieci. Najmłodszym z chłopców w grupie był Magozwe.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
+<p>যখন সেম্বিগোয়রের মা মারা গেলেন, সে অনেক কষ্ট পেল। সেম্বিগোয়রের বাবা তাঁর মেয়ের যথাসাধ্য যত্ন নিতেন। ধীরে ধীরে তারা সেম্বিগোয়রের মাকে ছাড়া খুশি থাকা শিখে গেলেন। প্রতি সকালে তারা বসে আগামী দিনের ব্যাপারে কথা বলতেন। প্রতি সন্ধ্যায় তারা একসাথে সান্ধ্যভোজের আয়োজন করতেন। বাসন ধোয়ার পর, সেম্বিগোয়রের বাবা তাকে স্কুলের কাজে সাহায্য করতেন।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/03.jpg" /></p>
-<p>Magozwe miał tylko pięć lat, kiedy jego rodzice zmarli. Wówczas zamieszkał ze swym wujem. Niestety, wuj nie dbał o chłopca. Nie pozwalał chłopcu się najeść i dawał mu wiele ciężkich prac do wykonania.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
+<p>একদিন সেম্বিগোয়রের বাবা অন্য দিনের তুলনায় দেরীতে বাড়ি ফিরলেন। &quot;তুমি কোথায় আমার বাচ্চা?&quot; তিনি ডাক দিলেন। সেম্বিগোয়রে দৌড়ে তাঁর বাবার কাছে আসল। সে থেমে গেল যখন সে দেখল তার বাবা একজন মহিলার হাত ধরে আছে। &quot;আমি চাই তুমি একজন বিশেষ ব্যক্তির সাথে পরিচিত হও, আমার বাচ্চা। ইনি আনিতা,&quot; তিনি মৃদু হেসে বললেন।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
-<p>Kiedy Magozwe narzekał lub przeciwstawiał się wujowi, ten go bił. Pewnego razu, gdy Magozwe zapytał czy mógłby pójść do szkoły wuj uderzył go i rzekł „Jesteś za głupi na to, żeby się czegokolwiek nauczyć”. Po trzech latach takiego traktowania Magozwe uciekł z domu swojego wuja i zamieszkał na ulicy.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
+<p>&quot;হ্যালো, সেম্বিগোয়রে, তোমার বাবা আমাকে তোমার সম্পর্কে অনেক কিছু বলেছেন,&quot; আনিতা বললেন। কিন্তু তিনি না হাসলেন না মেয়েটির হাত ধরলেন। সেম্বিগোয়রের বাবা অনেক খুশি এবং উচ্ছলিত ছিলেন। তিনি তাদের তিনজনের একসাথে থাকা, আর কিভাবে এতে করে তাদের জীবন সুন্দর হবে, এই ব্যাপারে কথা বললেন। &quot;আমার বাচ্চা, আশা করি তুমি আনিতাকে তোমার মা হিসেবে মেনে নিবে,&quot; তিনি বললেন।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
-<p>Życie na ulicy było trudne. Większość chłopców borykała się z codziennym problemem - zdobyciem jedzenia. Czasem byli aresztowani, czasem bici. Kiedy byli chorzy, nie miał im kto pomóc. Grupa chłopców żyła z tego co wyżebrała, ze sprzedaży plastikowych opakowań i innych przetwarzalnych odpadów. Stałe konflikty pomiędzy rywalizującymi grupami chłopców walczącymi o wpływy w danej części miasta nie ułatwiały życia.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
+<p>সেম্বিগোয়রের জীবন বদলে গেল। সকালবেলায় তার বাবার সাথে বসার মত আর কোনও সময় থাকল না। আনিতা তাকে গৃহস্থালির এত বেশি কাজ করতে দিত যে সে সন্ধ্যাবেলায় স্কুলের কাজ করতে ক্লান্ত হয়ে পড়ত। সে রাতের খাবারের পর ততক্ষণাত বিছানায় চলে যেত। তার একমাত্র সান্ত্বনা ছিল তার মার দেয়া রঙিন কম্বলটি। সেম্বিগোয়রের বাবা তার মেয়ে যে অসুখী তা খেয়াল করতেন বলে মনে হত না।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/06.jpg" /></p>
-<p>Pewnego dnia, gdy Magozwe przeszukiwał śmietniki znalazł starą, zniszczoną książkę z opowiastkami. Oczyścił ją i włożył do worka. Każdego dnia wyjmował książkę i oglądał w niej obrazki. Nie potrafił przeczytać słów.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
+<p>কয়েক মাস পর, সেম্বিগোয়রের বাবা তাদের বললেন যে তিনি কিছুদিনের জন্য বাড়ির বাহিরে যাবেন। &quot;আমাকে আমার কাজের জন্য সফরে যেতে হবে,&quot; তিনি বললেন। &quot;কিন্তু আমি জানি তোমরা একে অপরকে দেখে রাখবে।&quot; সেম্বিগোয়রের মুখ মলিন হয়ে গেল, কিন্তু তার বাবা তা খেয়াল করলেন না। আনিতা কিছু বললেন না। তিনিও খুশি ছিলেন না।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/07.jpg" /></p>
-<p>Obrazki przedstawiały historię chłopca, który wyrósł na pilota. Magozwe marzył o tym, aby kiedyś zostać pilotem. Czasem wyobrażał sobie, że jest chłopcem z opowiadania.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
+<p>সেম্বিগোয়রের জন্য অবস্থা আরও শোচনীয় হয়ে পড়ল। যদি সে কাজ শেষ না করত, বা কোনও নালিশ করত, তবে আনিতা তাকে মারতেন। এবং সান্ধ্যভোজে, সেম্বিগোয়রের জন্য কিছু এঁটো খাবার রেখে মহিলাটি প্রায় সব খাবার খেয়ে ফেলতেন। প্রতি রাতে সেম্বিগোয়রে তার মায়ের কম্বল জড়িয়ে কাঁদতে কাঁদতে ঘুমতো।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
-<p>Pewnego zimnego dnia Magozwe stał przy drodze i żebrał. Podszedł do niego mężczyzna i powiedział: „Witaj, jestem Thomas. Pracuję niedaleko, w miejscu, gdzie mógłbyś coś zjeść”. Wskazał na żółty dom z niebieskim dachem, „Liczę, że wpadniesz tam coś zjeść?”. Magozwe popatrzył na mężczyznę a potem na dom. „Może.” - odparł i odszedł.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
+<p>এক সকালে সেম্বিগোয়রের বিছানা থেকে উঠতে দেরী হয়ে গেল। &quot;অলস মেয়ে কোথাকার!&quot; আনিতা চেঁচিয়ে উঠলেন। তিনি বিছানা থেকে সেম্বিগোয়রেকে হেঁচড়া টানে বাহিরে ফেললেন। সেম্বিগোয়রের প্রাণপ্রিয় কম্বলটি একটি পেরেকে আঁটকে দু'টুকরো হয়ে গেল।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
-<p>W kolejnych miesiącach bezdomni chłopcy przyzwyczaili się do spotkań z Thomasem w okolicy. Lubił on rozmawiać z ludźmi, zwłaszcza z tymi mieszkającymi na ulicy. Thomas słuchał historii ich życia. Był przy tym poważny i cierpliwy, nigdy nieuprzejmy czy bez szacunku. Niektórzy z chłopców zaczęli odwiedzać niebiesko-żółty dom, aby coś zjeść w środku dnia.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
+<p>সেম্বিগোয়রে খুব মর্মাহত হল। সে বাড়ি থেকে পালিয়ে যাবার সিদ্ধান্ত নিল। সে তার মার দেয়া কম্বলের টুকরোগুলোকে নিল, কিছু খাবার নিল, এবং বাড়ি ছেড়ে চলে গেল। সে তার বাবা যে রাস্তা নিয়েছিল, সেই রাস্তা বরাবর চলতে লাগল।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
-<p>Magozwe siedział na krawężniku i oglądał obrazki w swojej książce, kiedy Thomas się do niego przysiadł. „O czym jest ta historia?” - zapytał. „Jest o chłopcu, który zostaje pilotem”, odpowiedział Magozwe. „Jak ten chłopiec ma na imię?” - dopytywał Magozwe. „Nie wiem, nie umiem czytać” - cicho odpowiedział Magozwe.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
+<p>যখন সন্ধ্যা নেমে এল, তখন সে এক নদীর ধারের উঁচু গাছ বেঁয়ে উঠল এবং এটির ডালে নিজের জন্য বিছানা পাতল। সে ঘুমিয়ে পড়তে পড়তে গাইতে লাগল, &quot;মা, মা, মা, তুমি আমাকে ছেড়ে চলে গেছ। তুমি আমাকে ছেড়ে চলে গেছ এবং কখনও ফিরে আসনি। বাবা আমাকে আর ভালবাসে না। মা, তুমি কখন ফিরে আসবে? তুমি আমাকে ছেড়ে চলে গেছ।&quot;</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
-<p>Kiedy się spotykali, Magozwe zaczął mu opowiadać własną historię. Była to opowieść o jego wuju i ucieczce z domu. Thomas nie mówił wiele i nie mówił Magozwe co robić, ale zawsze słuchał z uwagą. Czasem rozmawiali, gdy wspólnie jedli posiłek w domu z niebieskim dachem.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
+<p>পরদিন সকালে সেম্বিগোয়রে গানটি আবার গাইল। যখন মহিলারা নদীতে তাঁদের কাপড় ধুতে আসলেন, তাঁরা উঁচু গাছটি থেকে করুণ গানটি ভেসে আসতে শুনলেন। তাঁরা এটিকে শুধুমাত্র বাতাসে পাতার মর্মর শব্দ ভাবলেন এবং নিজেদের কাজ করতে থাকলেন। কিন্তু একজন মহিলা গানটি অনেক মনোযোগ সহকারে শুনলেন।</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
-<p>Gdy zbliżały się dziesiąte urodziny Magozwe, Thomas podarował mu nowe opowiadanie. Była to historia o chłopcu ze wsi, który został znanym piłkarzem. Thomas wielokrotnie czytał chłopcu tę opowieść. Pewnego dnia powiedział „Myślę, że nadszedł czas, abyś poszedł do szkoły i nauczył się czytać. Co o tym sądzisz?” Thomas wytłumaczył, że zna miejsce, w którym dzieci mogły zamieszkać i chodzić do szkoły.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
+<p>মহিলাটি গাছের উপরে তাকালেন। যখন তিনি মেয়েটিকে এবং রঙিন কম্বলের টুকরোগুলোকে দেখলেন, তখন তিনি কেঁদে উঠলেন, &quot;সেম্বিগোয়রে, আমার ভাইয়ের সন্তান!&quot; অন্য মহিলারা কাপড় ধোঁয়া থামিয়ে সেম্বিগোয়রেকে গাছ বেয়ে নিচে নামতে সাহায্য করলেন। তার ফুফু ছোট মেয়েটিকে জড়িয়ে ধরলেন এবং তাকে সান্ত্বনা দেবার চেষ্টা করলেন।</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
-<p>Magozwe rozmyślał o nowym miejscu i o chodzeniu do szkoły. Co jeśli wuj miał rację i Magozwe był za głupi by czegokolwiek się nauczyć? Co jeśli będą go bili w nowym miejscu? Miał wiele obaw. „Może lepiej jeśli zostanę na ulicy” - pomyślał.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
+<p>সেম্বিগোয়রের ফুফু বাচ্চাটিকে তাঁর নিজ বাড়িতে নিয়ে গেলেন। তিনি সেম্বিগোয়রেকে গরম খাবার দিলেন, এবং তাকে বিছানায় তার মার কম্বল দিয়ে জড়িয়ে দিলেন। সেই রাতে সেম্বিগোয়রে কাঁদতে কাঁদতে ঘুমিয়ে পড়ল। কিন্তু তা ছিল স্বস্তির অশ্রু। সে জানত যে তার ফুফু তার যত্ন নিবে।</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,8 +204,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/14.jpg" /></p>
-<p>Podzielił się swoimi obawami z Thomasem. Z czasem mężczyzna przekonał chłopca, że życie w nowym miejscu może być lepsze.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
+<p>যখন সেম্বিগোয়রের বাবা বাড়ি ফিরলেন, তিনি সেম্বিগোয়রের ঘরটি শূন্য পেলেন। &quot;কি হয়েছে আনিতা?&quot; তিনি ভারাক্রান্ত হৃদয়ে জিজ্ঞেস করলেন। মহিলাটি বুঝালেন যে সেম্বিগোয়রে পালিয়ে গেছে। &quot;আমি চেয়েছিলাম যে ও আমার সম্মান করুক,&quot; তিনি বললেন। &quot;কিন্তু আমি হয়ত বেশিই কঠোর ছিলাম।&quot; সেম্বিগোয়রের বাবা বাড়ি ছেড়ে চলে গেলেন এবং নদীর দিকে চলতে লাগলেন। তাঁর বোন সেম্বিগোয়রেকে দেখেছেন কিনা তা খুঁজে বের করতে তিনি তাঁর বোনের গ্রামে গেলেন।</p>
 <center>
 <strong>13</strong>
 </center>
@@ -213,8 +213,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
-<p>I tak Magozwe wprowadził się do pokoju w domu z zielonym dachem. Dzielił pokój z dwoma innymi chłopcami. Łącznie w tym domu mieszkało tam dziesięcioro dzieci wraz z ciocią Cissy, jej mężem, trzema psami, kotem i starą kozą.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
+<p>সেম্বিগোয়রে তাঁর ফুফাতো ভাইবোনদের সাথে খেলছিল যখন সে তার বাবাকে দূর থেকে দেখতে পেল। সে ভয় পেল যে তার বাবা রেগে যাবেন, তাই সে লুকোতে বাড়ির ভিতরে দৌড়ে গেল। কিন্তু তার বাবা তার কাছে গেলেন আর বললেন, &quot;সেম্বিগোয়রে, তুমি তোমার জন্য একজন আদর্শ মা খুঁজে পেয়েছ, যে তোমাকে ভালবাসেন এবং বুঝেন। আমি তোমাকে নিয়ে গর্বিত এবং আমি তোমাকে ভালবাসি।&quot; তারা একমত হল যে সেম্বিগোয়রে যতদিন খুশি ততদিন তার ফুফুর বাড়ি থাকতে পারবে।</p>
 <center>
 <strong>14</strong>
 </center>
@@ -222,8 +222,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/16.jpg" /></p>
-<p>Magozwe zaczął naukę w szkole, a nie było to łatwe. Miał wiele do nadrobienia. Czasami chciał się poddać, ale myślał o pilocie i piłkarzu z opowieści, i tak jak oni nie poddawał się.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
+<p>তার বাবা তাকে প্রতিদিন দেখতে আসতেন। অবশেষে তিনি আনিতাকে সাথে নিয়ে আসলেন। আনিতা সেম্বিগোয়রের হাত ধরার জন্য এগিয়ে গেলেন। &quot;আমি অনেক অনুতপ্ত বাচ্চা, আমি ভুল ছিলাম,&quot; তিনি কেঁদে বললেন। &quot;তুমি কি আমাকে আবার চেষ্টা করে দেখার সুযোগ দেবে?&quot; সেম্বিগোয়রে তার বাবা আর তার চিন্তিত মুখের দিকে তাকাল। তারপর সে গুঁটি গুঁটি পায়ে এগিয়ে যেয়ে আনিতাকে দু'হাত দিয়ে জড়িয়ে ধরল।</p>
 <center>
 <strong>15</strong>
 </center>
@@ -231,8 +231,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
-<p>Pewnego dnia Magozwe siedział w ogródku domu z zielonym dachem i czytał opowiadanie do szkoły. Thomas podszedł i usiadł koło niego. „O czym jest ta historia?” - zapytał. „Jest o chłopcu, który został nauczycielem” - odpowiedział Magozwe. „Jak on ma na imię?” - zapytał Thomas. „Ma na imię Magozwe” - z uśmiechem odparł Magozwe.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
+<p>পরের সপ্তাহে, আনিতা সেম্বিগোয়রে, তার ফুফাতো ভাইবোন এবং তার ফুফুকে বাড়িতে খাওয়ার জন্য আমন্ত্রণ জানালেন। কি যে দারুণ ভোজ! আনিতা সেম্বিগোয়রের প্রিয় সব খাবার রান্না করেছিলেন এবং সবাই পেট ভরে খেলেন। তারপর বড়দের কথা বলার সময় বাচ্চারা খেলা করল। সেম্বিগোয়রে অনেক খুশি এবং সাহসী অনুভব করছিল। সে সিদ্ধান্ত নিল যে শীঘ্রই, খুব শীঘ্রই, সে তার বাবা ও সৎমায়ের সাথে বসবাসের জন্য বাড়ি ফিরে যাবে।</p>
 <center>
 <strong>16</strong>
 </center>
@@ -240,12 +240,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="magozwe-1">Magozwe</h2>
-<strong>Text:</strong> Lesley Koyi<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
+<h2 id="সমবগযর-1">সেম্বিগোয়রে</h2>
+<strong>Text:</strong> Rukia Nantale<br> <strong>Illustrations:</strong> Benjamin Mitchley<br> <strong>Translation:</strong> Asma Afreen<br> <strong>Language:</strong> Bengali<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/magozwe-0'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/simbegwire'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
