--- a/stories/no/0327_å-telle-dyr_slides.html
+++ b/stories/no/0327_å-telle-dyr_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
-<p>Fem impalaer og seks villsvin går mot vannet.</p>
+<p>Fem impalaer og seks vortesvin går mot vannet.</p>
 <center>
 <strong>4</strong>
 </center>
