--- a/stories/pl/0158_kura-i-orlica.html
+++ b/stories/pl/0158_kura-i-orlica.html
@@ -49,56 +49,56 @@ Ann Nduku<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
 
-<p>Kiedyś, dawno temu Kura i Orlica przyjaźniły się. Żyły w zgodzie ze wszystkimi innymi ptakami, gdzie żadne z nich nie potrafiło latać.</p>
+<p>Dawno, dawno temu Kura i Orlica przyjaźniły się. Żyły w zgodzie ze wszystkimi innymi ptakami, gdzie żadne z nich nie potrafiło latać.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
 
-<p>Pewnego dnia nastał głód i Orlica musiała wędrować bardzo daleko, aby znależć pożywienie. Gdy wróciła zmęczona rzekła: „Musi być jakiś prostszy sposób wędrówki i podróżowania!”</p>
+<p>Pewnego dnia nastał głód i Orlica musiała wędrować bardzo daleko, aby znaleźć pożywienie. Gdy wróciła zmęczona powiedziała: „Musi być jakiś prostszy sposób wędrówki i podróżowania!”</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
 
-<p>Kura przespała się i wpadła na znakomity pomysł. Zaczęła zbierać pióra leżące na ziemi i rzekła: „pozszywajmy je ze sobą a potem przyczepmy je do naszych piór. Może wtedy będzie nam łatwiej podróżować.”</p>
+<p>Kura przespała się i wpadła na znakomity pomysł. Zaczęła zbierać pióra leżące na ziemi i powiedziała: „Pozszywajmy je ze sobą a potem przyczepmy je do naszych piór. Może wtedy będzie nam łatwiej podróżować.”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
 
-<p>Orlica była jedynym ptakiem mającym igłę więc przyszyła sobie parę pięknych skrzydeł i poleciała wysoko nad głową Kury. Gdy Kura szyła swoje skrzydła szybko znudziła się tym zajęciem i zostawiła igłę na szafce i wróciła do kuchni, aby przygotować obiad dla dzieci.</p>
+<p>Orlica była jedynym ptakiem, który miał igłę więc przyszyła sobie parę pięknych skrzydeł i poleciała wysoko nad głową Kury. Gdy Kura szyła swoje skrzydła szybko znudziła się tym zajęciem. Zostawiła igłę na szafce i wróciła do kuchni, aby przygotować obiad dla dzieci.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
 
-<p>Inne ptaki widząc Orlicę, która lata poprosiły Kurę, aby pożyczyła im igły. Wkrótce było mnóstwo ptaków, które latały po niebie.</p>
+<p>Inne ptaki widząc Orlicę, która lata i poprosiły Kurę, aby pożyczyła im igły. Wkrótce było mnóstwo ptaków, które latały po niebie.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
 
-<p>Kiedy ostatni ptak zwrócił igłę, nie zastał Kury w domu. Jej dzieci wzięły igłę i zaczęły się nią bawić. Kiedy zabawa im się znudziła - zostawiły igłę w piachu.</p>
+<p>Kiedy ostatni ptak zwrócił igłę, nie zastał Kury w domu. Jej dzieci wzięły igłę i zaczęły się nią bawić. Kiedy zabawa im się znudziła, zostawiły igłę w piachu.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
 
-<p>Po południu Orlica wróciła i poprosiła o swoją igłę - chciała poprawić swoje skrzydła, bo obluzowały się podczas lotu. Kura szukała igły na szafce, w kuchni, na podwórku. Igła zniknęła!</p>
+<p>Po południu Orlica wróciła i poprosiła o swoją igłę. Chciała poprawić swoje skrzydła, bo obluzowały się podczas lotu. Kura szukała igły na szafce, w kuchni, na podwórku. Igła zniknęła!</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
 
-<p>„Daj mi jeden dzień” - Kura błagała Orlicę. „Wtedy naprawisz swoje skrzydła i znów polecisz po jedzenie”. Orlica odpowiedziała: „Jeden dzień. Jeżeli nie znajdziesz mojej igły - oddasz mi jedno ze swoich dzieci w zamian.”</p>
+<p>„Daj mi jeden dzień!” - Kura błagała Orlicę. „Wtedy naprawisz swoje skrzydła i znów polecisz po jedzenie”. Orlica odpowiedziała: „Jeden dzień. Jeżeli nie znajdziesz mojej igły - oddasz mi jedno ze swoich dzieci w zamian.”</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Ann Nduku<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
 
-<p>Gdy cień skrzydeł Orlicy pada na ziemię, Kura ostrzega swoje dzieci, aby się schowały. „Nie jesteśmy głupie - schowamy się i uciekniemy!” - odpowiadają kurczęta.</p>
+<p>Gdy cień skrzydeł Orlicy pada na ziemię, Kura ostrzega swoje dzieci, aby się schowały. Kurczęta odpowiadają: „Nie jesteśmy głupie - schowamy się i uciekniemy!”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
