--- a/stories/pl/0201_ośle-dziecko.html
+++ b/stories/pl/0201_ośle-dziecko.html
@@ -84,7 +84,7 @@ Lindiwe Matshikiza<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
 
-<p>Ludzie zaczęli się kłócić: „Obiecaliśmy tej kobiecie bezpieczeństwo, jej i jej dziecku” - mówili jedni. „Ale przyniosą nam pecha!” - krzyczeli inni.</p>
+<p>Ludzie zaczęli się kłócić: „Obiecaliśmy tej kobiecie bezpieczeństwo, jej i jej dziecku” - mówili jedni. „Przyniosą nam pecha!” - krzyczeli inni.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -154,7 +154,7 @@ Lindiwe Matshikiza<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
 
-<p>Wysoko pośród chmur obaj zasnęli. Osiołek śnił o matce, która była ciężko chora i wzywała go. Gdy się zbudził…</p>
+<p>Wysoko pośród chmur obaj zasnęli. Osiołek śnił o matce, która była ciężko chora i wzywała go. Gdy się obudził…</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
