--- a/stories/pl/0210_tingi-i-krowy_slides.html
+++ b/stories/pl/0210_tingi-i-krowy_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/10.jpg" /></p>
-<p>I gdy jeden z żołnierzy stanął na chłopcu - Tingi nie wydał z siebie żadnego dźwięku.</p>
+<p>Gdy jeden z żołnierzy stanął na chłopcu, Tingi nie wydał z siebie żadnego dźwięku.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/11.jpg" /></p>
-<p>Kiedy zrobiło się bezpiecznie - Tingi wraz z babcią opuścili swoją kryjówkę.</p>
+<p>Kiedy zrobiło się bezpiecznie, Tingi wraz z babcią opuścili swoją kryjówkę.</p>
 <center>
 <strong>10</strong>
 </center>
