--- a/stories/pl/0243_wakacje-u-babci.html
+++ b/stories/pl/0243_wakacje-u-babci.html
@@ -49,7 +49,7 @@ Violet Otieno<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
 
-<p>Odongo i Apiyo mieszkali z ojcem w mieście. Nie mogli doczekać się wakacji. I to nie tylko dlatego, że w wakacje szkoła była zamknięta, ale przede wszystkim dlatego, że jechali odwiedzić babcię. Babcia mieszkała w wiosce rybackiej nieopodal jeziora.</p>
+<p>Odongo i Apiyo mieszkali z ojcem w mieście. Nie mogli doczekać się wakacj nie tylko dlatego, że w wakacje szkoła była zamknięta, ale przede wszystkim dlatego, że jechali odwiedzić babcię. Babcia mieszkała w wiosce rybackiej nieopodal jeziora.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Violet Otieno<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
 
-<p>Nyar-Kanyada powitała ich w swoim domu tańcząc i śpiewając z radości. Jej wnuki były szczęśliwe, gdy wręczały jej podarunki z miasta. „Najpierw otwórz mój prezent!” - krzyknął Odongo. „Nie, najpierw mój!” - przekrzykiwał go Apiyo.</p>
+<p>Nyar-Kanyada powitała ich w swoim domu tańcząc i śpiewając z radości. Jej wnuki były szczęśliwe, gdy wręczały jej podarunki z miasta. „Najpierw otwórz mój prezent!” - krzyknął Odongo. „Nie, najpierw mój!” - przekrzykiwała go Apiyo.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
