--- a/stories/pl/0291_słowa-siostry-vusi.html
+++ b/stories/pl/0291_słowa-siostry-vusi.html
@@ -63,35 +63,35 @@ Nina Orange<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
 
-<p>„Coś ty narobił?” - krzyczał Visu. „To jajko było przeznaczone na tort - na ślub mojej siostry. Co powie moja siostra jeżeli nie będzie tortu?”</p>
+<p>„Coś ty narobił?” - krzyczał Visu. „To jajko było przeznaczone na tort na ślub mojej siostry. Co powie moja siostra gdy nie będzie tortu?”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
 
-<p>Chłopcom zrobiło się głupio. „Niestety nie możemy pomóc Ci z tortem, ale proszę weź ten kij dla swojej siostry.” Więc Vusi kontynuował swoją podróż.</p>
+<p>Chłopcom zrobiło się głupio. „Niestety nie możemy pomóc Ci z tortem, ale proszę weź ten kij dla swojej siostry.” Vusi kontynuował swoją podróż.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
 
-<p>Podczas wędrówki spotkał dwóch mężczyzn budujących dom. „Czy możemy użyć tego kija?” Ale kij nie był wystarczająco silny i złamał się.</p>
+<p>Podczas wędrówki spotkał dwóch mężczyzn budujących dom. „Czy możemy użyć tego kija?” Jednak kij nie był wystarczająco silny i złamał się.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
 
-<p>„Co Wy narobiliście?” - krzyczał Vusi. „Ten kij był przeznaczony na prezent dla mojej siostry. Zbieracze owoców dali mi go, bo sami rozbili jajko na tort. Tort miał być na ślub mojej siostry. A teraz nie ma ani jajka, ani ani tortu, ani prezentu. Co powie moja siostra?”</p>
+<p>„Co zbiliście?” - krzyczał Vusi. „Ten kij był przeznaczony na prezent dla mojej siostry. Zbieracze owoców dali mi go, bo sami rozbili jajko na tort. Tort miał być na ślub mojej siostry. A teraz nie ma ani jajka, ani tortu, ani prezentu. Co powie moja siostra?”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
 
-<p>Robotnikom zrobiło się głupio. „Nie możemy pomóc Ci z tortem, ale proszę weź tę słomę dla swojej siostry.” I Vusi szedł dalej.</p>
+<p>Robotnikom zrobiło się głupio. „Nie możemy pomóc Ci z tortem, ale proszę weź tę słomę dla swojej siostry.” Vusi powędrował dalej.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Nina Orange<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
 
-<p>„Coś Ty narobiła?” - krzyczał Vusi. „To był prezent dla mojej siostry. Robotnicy dali mi ją, bo złamali kij od zbieraczy owoców. Zbieracze owoców dali mi kij bo zbili jajko na tort na ślub mojej siostry. A teraz nie ma ani jajka, ani tortu, ani prezentu. Co powie moja siostra?”</p>
+<p>„Coś Ty narobiła?” - krzyczał Vusi. „To był prezent dla mojej siostry. Robotnicy dali mi ją, bo złamali kij od zbieraczy owoców. Zbieracze owoców dali mi kij, bo zbili jajko na tort na ślub mojej siostry. A teraz nie ma ani jajka, ani tortu, ani prezentu. Co powie moja siostra?”</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Nina Orange<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
 
-<p>Ale krowa uciekła i wróciła do rolnika. Vusi zgubił się i przez to spóźnił się na ślub siostry. Wszyscy goście już jedli.</p>
+<p>Ale krowa uciekła i wróciła do rolnika. Vusi zgubił się i spóźnił się na ślub siostry. Wszyscy goście już jedli.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
@@ -133,7 +133,7 @@ Nina Orange<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
 
-<p>Siostra Vusi pomyślała przez chwilę. Po czym powiedziała: „Vusi, mój bracie - nie obchodzą mnie prezenty. Nawet tort mnie nie obchodzi! Jesteśmy tutaj wszyscy razem i to sprawia, że jestem szczęśliwa! Radujmy się i celebrujmy ten dzień!” I tak też zrobił Vusi.</p>
+<p>Siostra Vusi pomyślała przez chwilę. Po czym powiedziała: „Vusi, mój bracie, nie obchodzą mnie prezenty. Nawet tort mnie nie obchodzi! Jesteśmy tutaj wszyscy razem i to sprawia, że jestem szczęśliwa! Radujmy się i świętujmy ten dzień!” I tak też zrobił Vusi.</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
