--- a/stories/pl/0291_słowa-siostry-vusi_slides.html
+++ b/stories/pl/0291_słowa-siostry-vusi_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
-<p>„Coś ty narobił?” - krzyczał Visu. „To jajko było przeznaczone na tort - na ślub mojej siostry. Co powie moja siostra jeżeli nie będzie tortu?”</p>
+<p>„Coś ty narobił?” - krzyczał Visu. „To jajko było przeznaczone na tort na ślub mojej siostry. Co powie moja siostra gdy nie będzie tortu?”</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
-<p>Chłopcom zrobiło się głupio. „Niestety nie możemy pomóc Ci z tortem, ale proszę weź ten kij dla swojej siostry.” Więc Vusi kontynuował swoją podróż.</p>
+<p>Chłopcom zrobiło się głupio. „Niestety nie możemy pomóc Ci z tortem, ale proszę weź ten kij dla swojej siostry.” Vusi kontynuował swoją podróż.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
-<p>Podczas wędrówki spotkał dwóch mężczyzn budujących dom. „Czy możemy użyć tego kija?” Ale kij nie był wystarczająco silny i złamał się.</p>
+<p>Podczas wędrówki spotkał dwóch mężczyzn budujących dom. „Czy możemy użyć tego kija?” Jednak kij nie był wystarczająco silny i złamał się.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
-<p>„Co Wy narobiliście?” - krzyczał Vusi. „Ten kij był przeznaczony na prezent dla mojej siostry. Zbieracze owoców dali mi go, bo sami rozbili jajko na tort. Tort miał być na ślub mojej siostry. A teraz nie ma ani jajka, ani ani tortu, ani prezentu. Co powie moja siostra?”</p>
+<p>„Co zbiliście?” - krzyczał Vusi. „Ten kij był przeznaczony na prezent dla mojej siostry. Zbieracze owoców dali mi go, bo sami rozbili jajko na tort. Tort miał być na ślub mojej siostry. A teraz nie ma ani jajka, ani tortu, ani prezentu. Co powie moja siostra?”</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
-<p>Robotnikom zrobiło się głupio. „Nie możemy pomóc Ci z tortem, ale proszę weź tę słomę dla swojej siostry.” I Vusi szedł dalej.</p>
+<p>Robotnikom zrobiło się głupio. „Nie możemy pomóc Ci z tortem, ale proszę weź tę słomę dla swojej siostry.” Vusi powędrował dalej.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
-<p>„Coś Ty narobiła?” - krzyczał Vusi. „To był prezent dla mojej siostry. Robotnicy dali mi ją, bo złamali kij od zbieraczy owoców. Zbieracze owoców dali mi kij bo zbili jajko na tort na ślub mojej siostry. A teraz nie ma ani jajka, ani tortu, ani prezentu. Co powie moja siostra?”</p>
+<p>„Coś Ty narobiła?” - krzyczał Vusi. „To był prezent dla mojej siostry. Robotnicy dali mi ją, bo złamali kij od zbieraczy owoców. Zbieracze owoców dali mi kij, bo zbili jajko na tort na ślub mojej siostry. A teraz nie ma ani jajka, ani tortu, ani prezentu. Co powie moja siostra?”</p>
 <center>
 <strong>9</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
-<p>Ale krowa uciekła i wróciła do rolnika. Vusi zgubił się i przez to spóźnił się na ślub siostry. Wszyscy goście już jedli.</p>
+<p>Ale krowa uciekła i wróciła do rolnika. Vusi zgubił się i spóźnił się na ślub siostry. Wszyscy goście już jedli.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
-<p>Siostra Vusi pomyślała przez chwilę. Po czym powiedziała: „Vusi, mój bracie - nie obchodzą mnie prezenty. Nawet tort mnie nie obchodzi! Jesteśmy tutaj wszyscy razem i to sprawia, że jestem szczęśliwa! Radujmy się i celebrujmy ten dzień!” I tak też zrobił Vusi.</p>
+<p>Siostra Vusi pomyślała przez chwilę. Po czym powiedziała: „Vusi, mój bracie, nie obchodzą mnie prezenty. Nawet tort mnie nie obchodzi! Jesteśmy tutaj wszyscy razem i to sprawia, że jestem szczęśliwa! Radujmy się i świętujmy ten dzień!” I tak też zrobił Vusi.</p>
 <center>
 <strong>13</strong>
 </center>
