--- a/stories/pl/0294_babcine-banany_slides.html
+++ b/stories/pl/0294_babcine-banany_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
-<p>Ogród babci był wspaniały, pełen sorgo, proso, manioki. Jednak najlepsze były banany. I mimo, że babcia miała wiele wnucząt, czułam, że byłam jej ulubienicą. Często zapraszała mnie do domu. Ale był jeden sekret, którym się ze mną nie podzieliła: gdzie dojrzewały banany.</p>
+<p>Ogród babci był wspaniały, pełen sorgo, proso, manioki. Jednak najlepsze były banany. Mimo tego, że babcia miała wiele wnucząt, czułam, że byłam jej ulubienicą. Często zapraszała mnie do domu. Ale był jeden sekret, którym się ze mną nie podzieliła: gdzie dojrzewały banany.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
-<p>Pewnego dnia zauważyłam duży słomiany kosz stojący w słońcu na zewnątrz. Kiedy zapytałam co tam jest, babcia tylko powiedziała, że jest to magiczny kosz. Obok kosza było kilka liści bananowca, które babcia obracała od czasu do czasu. Byłam ciekawa: „Po co te liście babciu?” Jedyne co babcia odpowiadała to: „To moje magiczne liście”.</p>
+<p>Pewnego dnia zauważyłam duży słomiany kosz stojący w słońcu na zewnątrz. Kiedy zapytałam co tam jest, babcia odpowiedziała, że jest to magiczny kosz. Obok kosza było kilka liści bananowca, które babcia obracała od czasu do czasu. Byłam ciekawa: „Po co te liście babciu?” Babcia odpowiedziała: „To moje magiczne liście”.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
-<p>Oglądanie babci z bananami, z liśćmi i z dużym słomianym koszem było intrygujące. Ale babcia wysłała mnie do mamy. „Babciu, proszę pozwól mi patrzeć jak przygotowujesz…”. „Nie bądź uparta dziecko, zrób jak mówię.” - rozkazała babcia. Postanowiłam biec.</p>
+<p>Oglądanie babci z bananami, z liśćmi i z dużym słomianym koszem było intrygujące. Ale babcia wysłała mnie do mamy. „Babciu, proszę pozwól mi patrzeć jak przygotowujesz…” „Nie bądź uparta dziecko, zrób jak mówię.” - rozkazała babcia. Postanowiłam biec.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
-<p>Kiedy wróciłam, babcia siedziała na zewnątrz, ale nie było ani kosza ani bananów. „Babciu - gdzie jest słomiany kosz, gdzie są wszystkie banany i gdzie…”. Ale jedyna odpowiedź jaką otrzymałam to: „Wszystko jest w moim magicznym miejscu”. Co za rozczarowanie!</p>
+<p>Kiedy wróciłam, babcia siedziała na zewnątrz, ale nie było ani kosza ani bananów. „Babciu, gdzie jest słomiany kosz, gdzie są wszystkie banany i gdzie…” Ale jedyną odpowiedź jaką otrzymałam to: „Wszystko jest w moim magicznym miejscu”. Co za rozczarowanie!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
-<p>Dwa dni później babcia wysłała mnie po laskę do jej sypialni. Gdy tylko otworzyłam drzwi, uderzył mnie silny zapach dojrzałych bananów. W środku był słomiany kosz schowany pod starym kocem. Gdy uniosłam koc poczułam ten cudowny zapach.</p>
+<p>Dwa dni później babcia wysłała mnie po laskę do jej sypialni. Gdy otworzyłam drzwi, uderzył mnie silny zapach dojrzałych bananów. W środku był słomiany kosz schowany pod starym kocem. Gdy uniosłam koc poczułam cudowny zapach.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>Na drugi dzień kiedy babcia przyszła odwiedzić moją mamę, pobiegłam do domu babci, aby jeszcze raz zobaczyć banany. Była tam wiązanka dojrzałych bananów - schowałam jednego banana w mojej sukience. Po tym jak przykryłam słomiany kosz poszłam za dom i szybko go zjadłam. Był to najpyszniejszy banan jaki kiedykolwiek jadłam.</p>
+<p>Kiedy następnego dnia babcia przyszła odwiedzić moją mamę, pobiegłam do domu babci, aby jeszcze raz zobaczyć banany. Była tam wiązanka dojrzałych bananów. Schowałam jednego banana w mojej sukience. Po tym jak przykryłam słomiany kosz poszłam za dom i szybko go zjadłam. Był to najpyszniejszy banan jaki kiedykolwiek jadłam.</p>
 <center>
 <strong>7</strong>
 </center>
