--- a/stories/pl/0296_tom-sprzedawca-bananów.html
+++ b/stories/pl/0296_tom-sprzedawca-bananów.html
@@ -77,7 +77,7 @@ Humphreys Odunga<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
 
-<p>Ludzie mówią, że „U nas tylko kobiety sprzedają owoce. Od kiedy to facet sprzedaje owoce?”</p>
+<p>Ludzie mówią: „U nas tylko kobiety sprzedają owoce. Od kiedy to owoce sprzedaje mężczyzna?”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
