--- a/stories/pl/0296_tom-sprzedawca-bananów_slides.html
+++ b/stories/pl/0296_tom-sprzedawca-bananów_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
-<p>Ludzie mówią, że „U nas tylko kobiety sprzedają owoce. Od kiedy to facet sprzedaje owoce?”</p>
+<p>Ludzie mówią: „U nas tylko kobiety sprzedają owoce. Od kiedy to owoce sprzedaje mężczyzna?”</p>
 <center>
 <strong>5</strong>
 </center>
