--- a/stories/pl/0315_piosenka-sakimy.html
+++ b/stories/pl/0315_piosenka-sakimy.html
@@ -56,14 +56,14 @@ Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/03.jpg" /></p>
 
-<p>Gdy Sakima miał trzy latka zachorował i stracił wzrok. Ale mimo to był utalentowanym chłopcem.</p>
+<p>Gdy Sakima miał trzy lata, zachorował i stracił wzrok. Ale mimo to był utalentowanym chłopcem.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/04.jpg" /></p>
 
-<p>Sakima robił różne rzeczy, których jego rówieśnicy nie potrafili. Na przykład zasiadał ze starszymi w wiosce, aby omawiać ważne sprawy.</p>
+<p>Sakima robił różne rzeczy, których jego rówieśnicy nie potrafili. Zasiadał na przykład ze starszymi w wiosce, aby omawiać ważne sprawy.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -84,14 +84,14 @@ Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
 
-<p>„Słyszę je w mojej głowie i śpiewam, po prostu przychodzą do mnie.” - odpowiedział chłopiec.</p>
+<p>„Słyszę je w mojej głowie i śpiewam, po prostu przychodzą do mnie” - odpowiedział chłopiec.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
 
-<p>Sakima lubił śpiewać dla siostry, szczególnie, gdy była głodna. A siostra słuchała jego piosenki i kołysała się w jej rytm.</p>
+<p>Sakima lubił śpiewać dla siostry, szczególnie, gdy była głodna. A siostra słuchała jego piosenek i kołysała się w jej rytm.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
 
-<p>Sakima powiedział rodzicom, że może zaśpiewać dla bogacza - może wtedy bogacz przestanie się smucić. Ale rodzicom nie podobał się ten pomysł: „To jest bardzo bogaty człowiek, a Ty jesteś tylko niewidomym chłopcem i czy naprawdę myślisz, że możesz pomóc bogaczowi?”</p>
+<p>Sakima powiedział rodzicom, że może zaśpiewać dla bogacza - może wtedy bogacz przestanie się smucić. Ale rodzicom nie podobał się ten pomysł: „To jest bardzo bogaty człowiek, a Ty jesteś tylko niewidomym chłopcem. Naprawdę myślisz, że możesz pomóc bogaczowi?”</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
