--- a/stories/pl/0315_piosenka-sakimy_slides.html
+++ b/stories/pl/0315_piosenka-sakimy_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/03.jpg" /></p>
-<p>Gdy Sakima miał trzy latka zachorował i stracił wzrok. Ale mimo to był utalentowanym chłopcem.</p>
+<p>Gdy Sakima miał trzy lata, zachorował i stracił wzrok. Ale mimo to był utalentowanym chłopcem.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/04.jpg" /></p>
-<p>Sakima robił różne rzeczy, których jego rówieśnicy nie potrafili. Na przykład zasiadał ze starszymi w wiosce, aby omawiać ważne sprawy.</p>
+<p>Sakima robił różne rzeczy, których jego rówieśnicy nie potrafili. Zasiadał na przykład ze starszymi w wiosce, aby omawiać ważne sprawy.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
-<p>„Słyszę je w mojej głowie i śpiewam, po prostu przychodzą do mnie.” - odpowiedział chłopiec.</p>
+<p>„Słyszę je w mojej głowie i śpiewam, po prostu przychodzą do mnie” - odpowiedział chłopiec.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
-<p>Sakima lubił śpiewać dla siostry, szczególnie, gdy była głodna. A siostra słuchała jego piosenki i kołysała się w jej rytm.</p>
+<p>Sakima lubił śpiewać dla siostry, szczególnie, gdy była głodna. A siostra słuchała jego piosenek i kołysała się w jej rytm.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
-<p>Sakima powiedział rodzicom, że może zaśpiewać dla bogacza - może wtedy bogacz przestanie się smucić. Ale rodzicom nie podobał się ten pomysł: „To jest bardzo bogaty człowiek, a Ty jesteś tylko niewidomym chłopcem i czy naprawdę myślisz, że możesz pomóc bogaczowi?”</p>
+<p>Sakima powiedział rodzicom, że może zaśpiewać dla bogacza - może wtedy bogacz przestanie się smucić. Ale rodzicom nie podobał się ten pomysł: „To jest bardzo bogaty człowiek, a Ty jesteś tylko niewidomym chłopcem. Naprawdę myślisz, że możesz pomóc bogaczowi?”</p>
 <center>
 <strong>11</strong>
 </center>
