--- a/stories/pl/0324_dzień-w-którym-opuściłem-dom.html
+++ b/stories/pl/0324_dzień-w-którym-opuściłem-dom.html
@@ -56,7 +56,7 @@ Lesley Koyi, Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
 
-<p>„!” - usłyszałem. Świetnie! Tego autobusu potrzebowałem.</p>
+<p>„Centrum! Zachód!” - usłyszałem. Świetnie! Tego autobusu potrzebowałem.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -77,14 +77,14 @@ Lesley Koyi, Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
 
-<p>Ja wcisnąłem się pod oknem. Obok mnie siedział ktoś z zieloną reklamówką, z którą się nie rozstawał. Miał na sobie stare sandały i znoszoną marynarkę. Wyglądał na zdenerwowanego.</p>
+<p>Wcisnąłem się na miejsce pod oknem. Obok mnie siedział ktoś z zieloną reklamówką, z którą się nie rozstawał. Miał na sobie stare sandały i znoszoną marynarkę. Wyglądał na zdenerwowanego.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
 
-<p>Spojrzałem przez okno i uświadomiłem sobie, że opuszczam moją wioskę - miejsce, w którym dorastałem. Wyruszałem do dużego miasta.</p>
+<p>Spojrzałem przez okno i uświadomiłem sobie, że opuszczam moją wioskę, miejsce w którym dorastałem. Wyruszałem do dużego miasta.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Lesley Koyi, Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
 
-<p>Niektórzy pasażerowie kupili napoje, inni kupili przekąski i zaczęli pić i jeść. Ci, którzy nie mieli pieniędzy, jak ja, tylko patrzyli.</p>
+<p>Niektórzy pasażerowie kupili napoje, inni kupili przekąski i zaczęli pić i jeść. Ci, którzy tak jak ja nie mieli pieniędzy, tylko patrzyli.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Lesley Koyi, Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
 
-<p>Podczas podróży w autobusie zrobiło się bardzo gorąco. Zamknąłem oczy mając nadzieję, że zasnę.</p>
+<p>Podczas podróży, w autobusie zrobiło się bardzo gorąco. Zamknąłem oczy mając nadzieję, że zasnę.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -147,7 +147,7 @@ Lesley Koyi, Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
 
-<p>Dziewięć godzin później obudziło mnie głośne uderzęnie w autobus i nawoływanie pasażerów wracających do wioski. Wziąłem moją małą torbę i wyskoczyłem z autobusu.</p>
+<p>Dziewięć godzin później obudziło mnie głośne uderzenie w autobus i nawoływanie pasażerów wracających do wioski. Wziąłem moją małą torbę i wyskoczyłem z autobusu.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
