--- a/stories/pl/0324_dzień-w-którym-opuściłem-dom_slides.html
+++ b/stories/pl/0324_dzień-w-którym-opuściłem-dom_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
-<p>„!” - usłyszałem. Świetnie! Tego autobusu potrzebowałem.</p>
+<p>„Centrum! Zachód!” - usłyszałem. Świetnie! Tego autobusu potrzebowałem.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
-<p>Ja wcisnąłem się pod oknem. Obok mnie siedział ktoś z zieloną reklamówką, z którą się nie rozstawał. Miał na sobie stare sandały i znoszoną marynarkę. Wyglądał na zdenerwowanego.</p>
+<p>Wcisnąłem się na miejsce pod oknem. Obok mnie siedział ktoś z zieloną reklamówką, z którą się nie rozstawał. Miał na sobie stare sandały i znoszoną marynarkę. Wyglądał na zdenerwowanego.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
-<p>Spojrzałem przez okno i uświadomiłem sobie, że opuszczam moją wioskę - miejsce, w którym dorastałem. Wyruszałem do dużego miasta.</p>
+<p>Spojrzałem przez okno i uświadomiłem sobie, że opuszczam moją wioskę, miejsce w którym dorastałem. Wyruszałem do dużego miasta.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
-<p>Niektórzy pasażerowie kupili napoje, inni kupili przekąski i zaczęli pić i jeść. Ci, którzy nie mieli pieniędzy, jak ja, tylko patrzyli.</p>
+<p>Niektórzy pasażerowie kupili napoje, inni kupili przekąski i zaczęli pić i jeść. Ci, którzy tak jak ja nie mieli pieniędzy, tylko patrzyli.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
-<p>Podczas podróży w autobusie zrobiło się bardzo gorąco. Zamknąłem oczy mając nadzieję, że zasnę.</p>
+<p>Podczas podróży, w autobusie zrobiło się bardzo gorąco. Zamknąłem oczy mając nadzieję, że zasnę.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
-<p>Dziewięć godzin później obudziło mnie głośne uderzęnie w autobus i nawoływanie pasażerów wracających do wioski. Wziąłem moją małą torbę i wyskoczyłem z autobusu.</p>
+<p>Dziewięć godzin później obudziło mnie głośne uderzenie w autobus i nawoływanie pasażerów wracających do wioski. Wziąłem moją małą torbę i wyskoczyłem z autobusu.</p>
 <center>
 <strong>15</strong>
 </center>
