--- a/stories/pl/0327_liczymy-zwierzęta_slides.html
+++ b/stories/pl/0327_liczymy-zwierzęta_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
-<p>Pięć antylop i sześć dzików podchodzą do wodopoju.</p>
+<p>Pięć antylop i sześć dzików podchodzi do wodopoju.</p>
 <center>
 <strong>4</strong>
 </center>
