--- a/stories/pl/0337_dzieci-z-wosku.html
+++ b/stories/pl/0337_dzieci-z-wosku.html
@@ -49,7 +49,7 @@ Southern African Folktale<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
 
-<p>Dawno dawno temu, żyła sobie szczęśliwa rodzina.</p>
+<p>Dawno, dawno temu, żyła sobie szczęśliwa rodzina.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Southern African Folktale<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
 
-<p>Ale mimo to, jeden z chłopców był bardzo ciekawy światła dziennego.</p>
+<p>Mimo to, jeden z chłopców był bardzo ciekawy światła dziennego.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Southern African Folktale<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
 
-<p>Niestety było już za późno - stopił się w słońcu.</p>
+<p>Niestety było już za późno i chłopiec stopił się w słońcu.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Southern African Folktale<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
 
-<p>Wymyślili, że ze stopionego wosku ulepią ptaka.</p>
+<p>Postanowili ze stopionego wosku ulepić ptaka.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Southern African Folktale<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
 
-<p>I gdy wzeszło słońce, ptak odleciał ćwierkając w świetle dziennym.</p>
+<p>Gdy wzeszło słońce, ptak odleciał ćwierkając w świetle dziennym.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
