--- a/stories/ur/0315_سکیما-کا-گانا.html
+++ b/stories/ur/0315_سکیما-کا-گانا.html
@@ -154,14 +154,14 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
 
-<p>سیکما نے اپنا گانا ختم کیا اور واپس جانے کے مڑا۔ لیکن امیر آدمی بھاگتا ہو ا باہر آیا اورکہا مہربانی کر کے دوبارہ گاو۔</p>
+<p>سکیما نے اپنا گانا ختم کیا اور واپس جانے کے مڑا۔ لیکن امیر آدمی بھاگتا ہوا باہر آیا اورکہا مہربانی کر کے دوبارہ گاو۔</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/18.jpg" /></p>
 
-<p>اُسی لمحے دو آدمی کسی کو سٹریچر پر اُٹھائے لا رہے تھے۔ اُنہیں امیر آٓدمی کا بیٹا زخمی حالت میں سڑک کی بائیں جانب گِرا ہو ا ملا۔</p>
+<p>اُسی لمحے دو آدمی کسی کو سٹریچر پر اُٹھائے لا رہے تھے۔ اُنہیں امیر آٓدمی کا بیٹا زخمی حالت میں سڑک کی بائیں جانب گِرا ہوا ملا۔</p>
 
 <div class="pagenum">17</div>
 <p></div><div class="pagebreak"></p>
