--- a/stories/ur/0342_سزا.html
+++ b/stories/ur/0342_سزا.html
@@ -70,7 +70,7 @@ Adelheid Marie Bwire<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
 
-<p>دیکھو رحیم نے کیا کیا؟ میرا چھوٹا بھائی چلایا۔ رحیم بہت شرارتی اور خود غر ض ہے۔ میں نے کہا۔</p>
+<p>دیکھو رحیم نے کیا کیا؟ میرا چھوٹا بھائی چلایا۔ رحیم بہت شرارتی اور خود غرض ہے، میں نے کہا۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -105,14 +105,14 @@ Adelheid Marie Bwire<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
 
-<p>رحیم بیمار محسوس کرنے لگتا ہے</p>
+<p>رحیم بیمار محسوس کرنے لگتا ہے۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
 
-<p>میرے پیٹ میں درد ہے۔ رحیم چلایا۔</p>
+<p>میرے پیٹ میں درد ہے، رحیم چلایا۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
