--- a/stories/index.html
+++ b/stories/index.html
@@ -409,6 +409,12 @@
       <td><a name="bn0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0072</td>
+      <td><a href="/stories/bn/0072_হানিগাইড-পাখির-প্রতিশোধ_slides.html" target="_blank">হানিগাইড পাখির প্রতিশোধ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0111</td>
       <td><a href="/stories/bn/0111_জলহস্তীর-কেন-লোম-নেই_slides.html" target="_blank">জলহস্তীর কেন লোম নেই</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -449,6 +455,12 @@
       <td><a href="/stories/bn/0271_দুই_slides.html" target="_blank">দুই</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0291</td>
+      <td><a href="/stories/bn/0291_ভুসির-বোন-যা-বলল_slides.html" target="_blank">ভুসির বোন যা বলল</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0294</td>
@@ -6131,7 +6143,7 @@
       <td>0072</td>
       <td><a href="http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0072">ar</a>, <a href="#de0072">de</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ko0072">ko</a>, <a href="#nn0072">nn</a>, <a href="#no0072">no</a>, <a href="#pa0072">pa</a>, <a href="#pl0072">pl</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#tr0072">tr</a>, <a href="#ur0072">ur</a>, <a href="#yue0072">yue</a>, <a href="#zh0072">zh</a></td>
+      <td><a href="#ar0072">ar</a>, <a href="#bn0072">bn</a>, <a href="#de0072">de</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ko0072">ko</a>, <a href="#nn0072">nn</a>, <a href="#no0072">no</a>, <a href="#pa0072">pa</a>, <a href="#pl0072">pl</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#tr0072">tr</a>, <a href="#ur0072">ur</a>, <a href="#yue0072">yue</a>, <a href="#zh0072">zh</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -6479,7 +6491,7 @@
       <td>0291</td>
       <td><a href="http://africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0291">ar</a>, <a href="#de0291">de</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ja0291">ja</a>, <a href="#ko0291">ko</a>, <a href="#nn0291">nn</a>, <a href="#no0291">no</a>, <a href="#pa0291">pa</a>, <a href="#pl0291">pl</a>, <a href="#tl0291">tl</a>, <a href="#tr0291">tr</a>, <a href="#ur0291">ur</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
+      <td><a href="#ar0291">ar</a>, <a href="#bn0291">bn</a>, <a href="#de0291">de</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ja0291">ja</a>, <a href="#ko0291">ko</a>, <a href="#nn0291">nn</a>, <a href="#no0291">no</a>, <a href="#pa0291">pa</a>, <a href="#pl0291">pl</a>, <a href="#tl0291">tl</a>, <a href="#tr0291">tr</a>, <a href="#ur0291">ur</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
     </tr>
     <tr>
       <td>0293</td>
